[IT-2742] Fix bar gap size calculation and redraw on changed stack status

--- a/frontend/src/app/modules/aggregation/components/aggregation-chart/aggregation-chart.component.scss
+++ b/frontend/src/app/modules/aggregation/components/aggregation-chart/aggregation-chart.component.scss
@@ -10,6 +10,10 @@ svg.aggregation-chart-svg {
   height: 100%;
 }
 
+.legend-entry {
+  cursor: pointer;
+}
+
 .in-chart-buttons {
   position: absolute;
   top: 10px;
